Updated translation keys

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -5817,5 +5817,28 @@
   "eff21f4c-2d50-4553-9eb9-8a9e399f4124": "Je hebt niet voldoende toegangsrechten",
   "e115a9d1-11a6-42b9-a781-c6ab9d8a4b9c": "Dit werkjaar is vergrendeld, je kan er geen inschrijvingsgroepen meer verplaatsen",
   "753684e1-94aa-4663-a81c-9656a51283ae": "Je kan deze groep niet naar een andere periode verplaatsen omdat de wachtlijst van deze groep gedeeld is met andere groepen.",
-  "18530ea6-4c97-4fd8-af49-54ed7b812a59": "Ander werkjaar"
+  "18530ea6-4c97-4fd8-af49-54ed7b812a59": "Ander werkjaar",
+  "04fe8969-a277-417d-92e8-8bd532affc19": "Functionaliteiten activeren",
+  "e923e4f3-42d4-4f9b-a919-2709c99780bb": "Activeer nieuwe functies",
+  "5afbf5f5-1051-4a95-9c90-602c828094fa": " Kies de functies die je wilt activeren. Meer info over alle prijzen kan je terugvinden op <button>onze website</button>",
+  "6ed63ff0-296c-4151-905a-fc6fdc7832e8": "In proefperiode",
+  "01c1e6ec-a92b-455f-8721-08f4cd900b67": "Stop proefperiode",
+  "b69ae0b8-d957-4dde-b06d-a6f97ceea656": "Vervalt binnenkort",
+  "493f3fc9-ea9e-4b3d-8af6-e15cd3fd2539": "Actief",
+  "e40ae4e1-abe1-418d-8662-16626c93acc2": "Geldig tot {dateTime}",
+  "dd5ee237-2ae7-475c-b58d-3c5a2159f4c5": "Momenteel zijn inschrijvingen voor nieuwe leden gesloten. Als je een bestaand lid bent, kijk dan na of je met het juiste e-mailadres inlogt.",
+  "2f657935-44b2-4fd6-baaa-a89b7b4da83d": "Geef ouders toegang en stuur hen automatische e-mails",
+  "810b15cd-001e-4ab9-9d9e-054044904879": "Momenteel hebben de ouders toegang tot {firstName} 18 jaar wordt.",
+  "a9439a82-82d3-4254-a3a6-abe14952a392": "De ouders hebben toegang tot de gegevens van {firstName} en ontvangen automatische e-mails.",
+  "d5ee5112-988f-4d4b-82e0-46f257c40bbb": "Ze behouden ook toegang nadat {firstName} 18 jaar wordt. <button>Ongedaan maken</button>",
+  "78c16cd9-a935-4382-9828-7b30d9808e0f": "De ouders krijgen geen toegang tot de gegevens van {firstName}. Ze ontvangen ook geen automatische e-mails.",
+  "aeeeb5ba-7576-497c-a40e-8bc48338b2a7": "De ouders behouden toegang als dit lid 18 jaar wordt",
+  "54bdf92a-7ff9-46ba-a944-2422f4b84f80": "De ouders hebben toegang tot dit meerderjarig lid",
+  "9ce4a6f7-81ec-4dba-aac5-5d497d33a274": "De ouders hebben geen toegang tot dit minderjarig lid",
+  "e15286b6-ccc1-463c-95de-d5d87b6b84a4": "Ledenadministratie",
+  "3b1c092c-fdb5-4322-a34d-b8142881b3cf": "Webshops, ticketverkoop en openbare inschrijvingen",
+  "752fdb9b-b159-41b3-95d1-fc3bd83bf9b4": "Proefperiode ledenadministratie",
+  "6aeb7f4b-9a84-4738-b3ca-db96a7c92fcd": "Proefperiode webshops",
+  "2e76098c-b75a-4c40-ae13-03bbc1f06b3e": "Beheer je leden overzichtelijk, houd gegevens netjes bij en geef hen toegang tot jullie eigen ledenportaal om hun gegevens te beheren of inschrijvingen te doen.",
+  "3c731bcc-187c-437f-8d6c-f1c1b1207c86": "Verkoop tickets, inschrijvingen, merchandising en meer via één of meerdere webshops."
 }
