--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -533,7 +533,7 @@
   "18cbfdea-798d-4efc-aad8-f6897c9efb2c": "Kies hoeveel dagen er minimaal tussen elke e-mail moet zitten, en hoeveel e-mails je maximaal wilt versturen ter herinnering voor een openstaand bedrag. E-mails die je zelf verstuurt tellen niet mee.",
   "6b39d554-a4a7-489c-84b5-3f430457dd50": "Contactpersonen voor schulden van andere verenigingen",
   "0998a455-9ffc-4222-8432-ef7681908ad7": "Als een andere vereniging schulden aan jouw vereniging heeft, kan je hiervoor ook automatische e-mails versturen. Dit gebeurt op basis van functies die je hieronder kan instellen.",
-  "15b6f0c8-6287-4b4d-bf34-4da2f4a0e575": "*Je kan een openstaand bedrag uitstellen - bv. voor gespreid betalen of een proefperiode. Het verschijnt pas als snelle actie in het ledenportaal vanaf één week voor deze datum (samen met een eventuele automatische e-mail) en moet betaald zijn tegen de ingevulde datum. Het is mogelijk om het al vroeger te betalen, maar zeker niet verplicht.",
+  "15b6f0c8-6287-4b4d-bf34-4da2f4a0e575": "Je kan een openstaand bedrag uitstellen - bv. voor gespreid betalen of een proefperiode. Het verschijnt pas als snelle actie in het ledenportaal vanaf één week voor deze datum (samen met een eventuele automatische e-mail) en moet betaald zijn tegen de ingevulde datum. Het is mogelijk om het al vroeger te betalen, maar zeker niet verplicht.",
   "fb8c1c30-2108-4a1b-a412-0381263e860e": "Boekhouding en aansluitingen",
   "77e1bb0a-166c-4d37-9dd6-c5ad10a9d91b": "Betalingen exporteren",
   "35f1db1d-e8bd-4a0c-8141-97b8c716ec17": "Overschrijvingen controleren",
@@ -3014,7 +3014,7 @@
   "e61decd2-e7a4-4be9-b9d4-c46710faa1a7": "Bv. Aankoop T-shirt",
   "ab0535e6-bbaa-4961-a34f-aca39ef0d785": "Verschuldigd sinds",
   "bfcceb79-e614-4e9c-9fba-0ec2bd3f8f2a": "1",
-  "bf30128b-4c99-4a97-b4d2-1a4e62f33f41": "Te betalen tegen*",
+  "bf30128b-4c99-4a97-b4d2-1a4e62f33f41": "Te betalen tegen",
   "ef2b5d01-756d-46d0-8e1d-a200f43a3921": "Onmiddelijk",
   "1a34199f-e779-4947-b0d3-a41aeefa901a": "Overschrijvingsdetails",
   "12472cd2-4c67-4e54-81dc-cba8fd6c1c91": "Overgeschreven via",
