--- a/shared/locales/src/digit/machine-fr.json
+++ b/shared/locales/src/digit/machine-fr.json
@@ -116,8 +116,8 @@
     "translation": "Utilisez des remplacements de texte automatiques dans le message via"
   },
   "15b6f0c8-6287-4b4d-bf34-4da2f4a0e575": {
-    "original": "*Je kan een openstaand bedrag uitstellen - bv. voor gespreid betalen of een proefperiode. Het verschijnt pas als snelle actie in ‘Mijn account’ vanaf één week voor deze datum (samen met een eventuele automatische e-mail) en moet betaald zijn tegen de ingevulde datum. Het is mogelijk om het al vroeger te betalen, maar zeker niet verplicht.",
-    "translation": "*Vous pouvez reporter un montant dû - par exemple, pour un paiement échelonné ou une période d'essai. Il n'apparaît comme action rapide dans « Mon compte » qu'à partir d'une semaine avant cette date (avec un éventuel e-mail automatique) et doit être payé à la date indiquée. Il est possible de payer plus tôt, mais ce n'est certainement pas obligatoire."
+    "original": "Je kan een openstaand bedrag uitstellen - bv. voor gespreid betalen of een proefperiode. Het verschijnt pas als snelle actie in ‘Mijn account’ vanaf één week voor deze datum (samen met een eventuele automatische e-mail) en moet betaald zijn tegen de ingevulde datum. Het is mogelijk om het al vroeger te betalen, maar zeker niet verplicht.",
+    "translation": "Vous pouvez reporter un montant dû - par exemple, pour un paiement échelonné ou une période d'essai. Il n'apparaît comme action rapide dans « Mon compte » qu'à partir d'une semaine avant cette date (avec un éventuel e-mail automatique) et doit être payé à la date indiquée. Il est possible de payer plus tôt, mais ce n'est certainement pas obligatoire."
   },
   "18a411e7-8fec-4d99-bde1-0cbc9c3f5cf8": {
     "original": "Je kan op ‘Mijn account’ een nieuw account aanmaken op het e-mailadres {email}.",
