--- a/shared/locales/src/machine-en.json
+++ b/shared/locales/src/machine-en.json
@@ -1992,8 +1992,8 @@
     "translation": "car"
   },
   "15b6f0c8-6287-4b4d-bf34-4da2f4a0e575": {
-    "original": "*Je kan een openstaand bedrag uitstellen - bv. voor gespreid betalen of een proefperiode. Het verschijnt pas als snelle actie in het ledenportaal vanaf één week voor deze datum (samen met een eventuele automatische e-mail) en moet betaald zijn tegen de ingevulde datum. Het is mogelijk om het al vroeger te betalen, maar zeker niet verplicht.",
-    "translation": "*You can postpone an outstanding amount - e.g. for staggered payments or a trial period. It only appears as a quick action in the member portal from one week before this date (together with any automatic email) and must be paid by the entered date. It is possible to pay it earlier, but certainly not obligatory."
+    "original": "Je kan een openstaand bedrag uitstellen - bv. voor gespreid betalen of een proefperiode. Het verschijnt pas als snelle actie in het ledenportaal vanaf één week voor deze datum (samen met een eventuele automatische e-mail) en moet betaald zijn tegen de ingevulde datum. Het is mogelijk om het al vroeger te betalen, maar zeker niet verplicht.",
+    "translation": "You can postpone an outstanding amount - e.g. for staggered payments or a trial period. It only appears as a quick action in the member portal from one week before this date (together with any automatic email) and must be paid by the entered date. It is possible to pay it earlier, but certainly not obligatory."
   },
   "15bb965e-b592-4954-a40e-3cbe5786e591": {
     "original": "Unieke identificatie van de lijn",
@@ -16784,8 +16784,8 @@
     "translation": "Availability"
   },
   "bf30128b-4c99-4a97-b4d2-1a4e62f33f41": {
-    "original": "Te betalen tegen*",
-    "translation": "Payable by*"
+    "original": "Te betalen tegen",
+    "translation": "Payable by"
   },
   "bf43c364-65c2-4cbe-98ff-f9e6b4c7d659": {
     "original": "Delen",
