Improved error message

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -1568,8 +1568,8 @@
   "0a79a933-90a4-477e-9598-b64d6bb28281": "De besteller(s) van bestellingen ontvangen in sommige gevallen een automatische e-mail.",
   "8076e99d-cac2-4fb6-84e0-d893d9b3c205": "Betaalstatus gewijzigd",
   "37848bd6-919a-4f31-bfc7-e0e809e68847": "Al gemarkeerd als betaald",
-  "d9e58e49-d5d5-4a89-9e6a-1bd8eaf0cb1e": "Deze betaling werd nog niet betaald",
-  "d23f91da-079b-40fe-9da1-14b9ac7e65ab": "Deze betalingen werden nog niet betaald",
+  "d9e58e49-d5d5-4a89-9e6a-1bd8eaf0cb1e": "Deze actie heeft geen effect. Deze betaling werd nog niet betaald, je kan het niet nog eens als niet betaald markeren.",
+  "d23f91da-079b-40fe-9da1-14b9ac7e65ab": "Deze actie heeft geen effect. Deze betalingen werden nog niet betaald, je kan ze niet nog eens als niet betaald markeren.",
   "e322ea15-9df9-4654-bccc-c7147f35e18f": "De openstaande bedragen kunnen soms herhaald worden als er meerdere ouders of e-mailadressen zijn ingesteld bij een lid.",
   "3df2215e-5c13-493d-afc6-4a866150960c": "Te ontvangen bedragen",
   "6025e62d-b832-47dc-93e8-ad7d5753069f": "Dit werkblad bevat één rij per te ontvangen bedrag, maar een te ontvangen bedrag zelf kan wel voor meerdere items zijn. Voor meer detailinformatie heb je het tabblad Betaallijnen nodig.",
